# Roblox-assets-extractor

./: .gitignore  CHECKLIST.md  Cargo.toml  LICENSE  README.md  Roblox assets extractor.py  Roblox assets extractor.pyw  build.rs  build_readme.py  hashes.txt  index.html  latestchangelog.txt  locale_sync.py  main.js  styles.css
.github/: FUNDING.yml
.github/workflows/: build-and-release.yml  build_linux.yml  build_win.yml
demo/: index.html  parser.js  styles.css
docs/: CLI.md  languages.md
docs/en-GB/: CLI.md  FAQ.md  README.md  python.md
locales/: de-DE.ftl  en-GB.ftl  englifsh.ftl  ja-JP.ftl  pirate-speak.ftl  pl-PL.ftl  shakespearian-english.ftl
src/: config.rs  gui.rs  locale.rs  log.rs  logic.rs  main.rs  updater.rs
src/gui/: settings.rs  welcome.rs
src/installer/: installer.bat  installer.sh
src/updater/: gui.rs
