[package]
name = "Roblox-assets-extractor"
version = "0.0.1"
edition = "2021"

[dependencies]
clap = { version = "4.5.21", features = ["derive","std"], default-features = false }
eframe = "0.29"
egui = "0.29"
egui_commonmark = "0.18.0"
egui_dock = "0.14.0"
fluent-bundle = { version = "0.15.3", default-features = false }
image = { version = "0.25.5", default-features = false, features = ["png"] }
lazy_static = "1.5.0"
native-dialog = "0.7.0"
open = "5.3.1"
reqwest = { version = "0.12.9", features = ["blocking"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = { version = "1.0.133", features=["std"], default-features = false }
sys-locale = "0.3.2"
tempfile = "3"
unic-langid = "0.9.5"
whoami = { version = "1.5.2", default-features = false }

[build-dependencies]
winresource = "0.1.17"

# Minimize executable size (Target size < 10MB)
[profile.release.package."*"] # Exclude this on Windows as this somehow false-triggers Windows Defender...
opt-level = "z"
codegen-units = 1
debug = false
overflow-checks = false

[profile.release]
opt-level = 3 # Main search logic in this project, opt-level 3 for speed
codegen-units = 1
lto = "fat"
debug = false
panic = "abort"
overflow-checks = false
