[package]
name = "Roblox-assets-extractor"
version = "0.1.4"
edition = "2021"

[dependencies]
chrono = { features = ["clock"], default-features = false, version = "0.4.40" }
clap = { version = "4.5.32", features = ["std", "derive"], default-features = false }
eframe = { features = ["default_fonts", "x11", "glow"], default-features = false, version = "0.31.1" }
egui = { default-features = false, version = "0.31" }
egui_commonmark = { default-features = false, version = "0.20.0" }
egui_dock = "0.16.0"
filetime = "0.2.25"
fluent-bundle = { version = "0.15.3", default-features = false }
image = { version = "0.25.5", default-features = false, features = ["png","webp"] }
lazy_static = "1.5.0"
native-dialog = "0.7.0"
open = "5.3.2"
reqwest = { version = "0.12.14", features = ["blocking"] }
serde = { version = "1.0.219", features = ["derive"], default-features = false }
serde_json = { version = "1.0.140", features=["std"], default-features = false }
sys-locale = "0.3.2"
tempfile = { default-features = false, version = "3" }
unic-langid = "0.9.5"
whoami = { version = "1.5.2", default-features = false }

[build-dependencies]
chrono = "0.4.40"
winresource = "0.1.20"

# Minimize executable size (Target size < 10MB)
[profile.release.package."*"]
opt-level = 3
codegen-units = 1
debug = false
overflow-checks = false
strip = true

[profile.release]
opt-level = 3 # Main search logic in this project, opt-level 3 for speed
codegen-units = 1
lto = "fat"
debug = false
panic = "abort"
overflow-checks = false
strip = true
